[tool.poetry]
name = "modelstar"
version = "0.1.0"
description = ""
authors = ["Adithya Krishnan <krishsandeep@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
tomlkit = "^0.11.4"
snowflake-connector-python = "^2.7.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
modelstar = "modelstar.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
