[tool.poetry]
name = "modelstar"
version = "0.1.0"
description = "DevOps for User Defined Functions and Stored Procedures in Data Warehouses"
authors = ["Adithya Krishnan <krishsandeep@gmail.com>"]
keywords = ["snowflake", "databricks", "UDF", "Stored Procedure"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://modelstar.io"
repository = "https://github.com/modelstar-labs"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
tomlkit = "^0.11.4"
snowflake-connector-python = "^2.7.12"
tabulate = "^0.8.10"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
modelstar = "modelstar.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
