[tool.poetry]
name = "modelstar"
version = "0.3.0"
description = "DevOps for User Defined Functions and Stored Procedures in Data Warehouses"
authors = ["Adithya Krishnan <krishsandeep@gmail.com>"]
keywords = ["snowflake", "forecast", "UDF", "Stored Procedure"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://modelstar.io"
repository = "https://github.com/modelstar-labs"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
snowflake-connector-python = "^2.7.12"
tabulate = "^0.8.10"
joblib = "^1.2.0"
pandas = "^1.5.1"
PyYAML = "^6.0"
jsonschema = "^4.16.0"
Jinja2 = "^3.1.2"

[tool.poetry.scripts]
modelstar = "modelstar.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
black = "^22.10.0"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
